--- a/terasoluna-gfw-dependencies/terasoluna-gfw-recommended-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/terasoluna-gfw-recommended-dependencies/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>terasoluna-gfw-dependencies</artifactId>
     <groupId>org.terasoluna.gfw</groupId>
-    <version>5.7.0.RELEASE</version>
+    <version>5.7.0.SP1.RELEASE</version>
     <relativePath>../../terasoluna-gfw-dependencies/pom.xml</relativePath>
   </parent>
   <artifactId>terasoluna-gfw-recommended-dependencies</artifactId>
