--- a/terasoluna-gfw-common-libraries/pom.xml
+++ b/terasoluna-gfw-common-libraries/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.terasoluna.gfw</groupId>
     <artifactId>terasoluna-gfw-parent</artifactId>
-    <version>5.6.2.RELEASE</version>
+    <version>5.6.2.SP1.RELEASE</version>
     <relativePath>../terasoluna-gfw-parent/pom.xml</relativePath>
   </parent>
   <artifactId>terasoluna-gfw-common-libraries</artifactId>
