--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-codepoints/catalog/terasoluna-gfw-codepoints-jisx0213kanji/pom.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-codepoints/catalog/terasoluna-gfw-codepoints-jisx0213kanji/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>terasoluna-gfw-common-libraries</artifactId>
     <groupId>org.terasoluna.gfw</groupId>
-    <version>5.6.2.RELEASE</version>
+    <version>5.6.2.SP1.RELEASE</version>
     <relativePath>../../../../terasoluna-gfw-common-libraries/pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
