--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -541,6 +541,7 @@
     <!-- == MapStrcut== -->
     <mapstruct.version>1.5.2.Final</mapstruct.version>
     <!-- == Lombok == -->
+    <!-- lombok.version is the same as the version managed by Spring Boot. -->
     <lombok.version>1.18.24</lombok.version>
     <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
     <!-- == Joda-Time == -->
