--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -354,6 +354,14 @@
       </dependency>
       <!-- == End MapStruct== -->
 
+      <!-- == Begin Date and Time API == -->
+      <dependency>
+        <groupId>net.sargue</groupId>
+        <artifactId>java-time-jsptags</artifactId>
+        <version>${net.sargue.java-time-jsptags.version}</version>
+      </dependency>
+      <!-- == End Date and Time API == -->
+
       <!-- == Begin Joda-Time == -->
       <dependency>
         <groupId>joda-time</groupId>
@@ -511,6 +519,8 @@
     <!-- lombok.version is the same as the version managed by Spring Boot. -->
     <lombok.version>1.18.24</lombok.version>
     <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
+    <!-- == Date and Time API == -->
+    <net.sargue.java-time-jsptags.version>2.0.0</net.sargue.java-time-jsptags.version>
     <!-- == Joda-Time == -->
     <joda-time.joda-time.version>2.10.9</joda-time.joda-time.version>
     <joda-time.joda-time-jsptags.version>1.1.1</joda-time.joda-time-jsptags.version>
