--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-web-jsp/pom.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-web-jsp/pom.xml
@@ -110,8 +110,8 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>jakarta.el</groupId>
-            <artifactId>jakarta.el-api</artifactId>
+            <groupId>org.glassfish</groupId>
+            <artifactId>jakarta.el</artifactId>
             <scope>provided</scope>
         </dependency>
         <!-- == End Other == -->
