--- a/terasoluna-gfw-dependencies/terasoluna-gfw-web-jsp-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/terasoluna-gfw-web-jsp-dependencies/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>terasoluna-gfw-dependencies</artifactId>
         <groupId>org.terasoluna.gfw</groupId>
-        <version>5.7.4-SNAPSHOT</version>
+        <version>5.7.4.RC1</version>
         <relativePath>../../terasoluna-gfw-dependencies/pom.xml</relativePath>
     </parent>
     <artifactId>terasoluna-gfw-web-jsp-dependencies</artifactId>
