--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.terasoluna.gfw</groupId>
     <artifactId>terasoluna-gfw-parent</artifactId>
-    <version>5.7.4-SNAPSHOT</version>
+    <version>5.7.4.RELEASE</version>
     <packaging>pom</packaging>
     <name>TERASOLUNA Server Framework for Java (5.x) Parent</name>
     <description>The parent of TERASOLUNA Server Framework for Java (5.x)</description>
@@ -344,8 +344,8 @@
         <org.sonatype.plugins.nexus-staging-maven-plugin.version>1.6.8</org.sonatype.plugins.nexus-staging-maven-plugin.version>
         <!-- == Dependency Versions == -->
         <!-- == TERASOLUNA == -->
-        <terasoluna.gfw.version>5.7.4-SNAPSHOT</terasoluna.gfw.version>
-        <terasoluna.gfw.bom.version>1.0.0-SNAPSHOT</terasoluna.gfw.bom.version>
+        <terasoluna.gfw.version>5.7.4.RELEASE</terasoluna.gfw.version>
+        <terasoluna.gfw.bom.version>1.0.0.RELEASE</terasoluna.gfw.bom.version>
         <!-- == Project Properties == -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <archetype.test.skip>true</archetype.test.skip>
