--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-codepoints/pom.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-codepoints/pom.xml
@@ -78,7 +78,7 @@
         <!-- == Begin Unit Test == -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
+            <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
