--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-common/pom.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-common/pom.xml
@@ -148,12 +148,7 @@
         <!-- == Begin Unit Test == -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-params</artifactId>
+            <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
